
* docutils/MANIFEST.in

  - Exclude test outputs.

* docutils/__init__.py

  - VersionInfo: ValueError for invalid values, fix comparison to tuples.

* docutils/nodes.py

  - Apply patch #165: Fix error when copying `system_message` node
    (by Takeshi KOMIYA).
  - Apply version of patch #167: Let document.set_id() register all
    existing IDs (thanks to Takeshi KOMIYA).

* docutils/utils/smartquotes.py

  - Fix #383: Smart quotes around opening and separator characters.

* docutils/writers/html5_polyglot/

  - Use the new semantic tags <main>, <section>, <header>,
    <footer>, <aside>, <figure>, and <figcaption>.
    See ``minimal.css`` and ``plain.css`` for styling rule examples.

  - Use HTML text-level tags <small>, <s>, <q>, <dfn>, <var>, <samp>, <kbd>,
    <i>, <b>, <u>, <mark>, and <bdi> if a matching class value
    is found in `inline` and `literal` elements.
    Use <ins> and <del> if a matching class value
    is found in `inline`, `literal`, or `container` elements.

  - Wrap block-level image elements in <p> (except for figures).
    Move non-essential styling from ``minimal.css`` to ``plain.css``.
    Support numbered figures in ``plain.css``.

* docutils/writers/latex2e/__init__.py:

  - Use LaTeX environments for admonitions and "class wrappers" for styling
    admonitions and titles if the new configuration setting
    `legacy_class_functions`_ is False.

  - Remove backwards compatibility code for the deprecated
    `styling command`__ prefix ``\docutilsrole``.

    __ docs/user/latex.html#classes
    
  - Support the `memoir` LaTeX document class.
    Fixes #390, #391, and #392. 

* docutils/writers/manpage.py

  - Fix #394 fix missing new line after rubric.
  - Patch #168 fix crashing on empty citation (by Takeshi KOMIYA).
  - Fix #126 manpage title with spaces.
  - Fix #380 commandline option problem in sphinx.

.. _pip: https://pypi.org/project/pip/
.. _legacy_class_functions: docs/user/config.html#legacy-class-functions


Release 0.16